[package]
name = "rocket-lenient-json"
version = "0.3.1"
authors = ["Sergio Benitez <sb@sergio.bz>", "Messense Lv <messense@icloud.com>"]
description = "A `rocket_contrib::Json` copy which removes the `Content-Type` check"
keywords = ["rocket", "json"]
license = "MIT/Apache-2.0"
readme = "README.md"
categories = ["web-programming::http-server"]
repository = "https://github.com/messense/rocket-lenient-json.git"

[dependencies]
rocket = "0.3"
serde = "1.0"
serde_json = "1.0"
log = "^0.3"

[badges]
travis-ci = { repository = "messense/rocket-lenient-json" }
